fix style for small screen and horizontal menu + scrolling of menu config on small screen

--- a/Angular/src/assets/bia/primeng/bia/overrides/_layout_styles.scss
+++ b/Angular/src/assets/bia/primeng/bia/overrides/_layout_styles.scss
@@ -273,3 +273,14 @@ body {
     margin-left: 0;
   }
 }
+
+.layout-menu-profile {
+  height: 100%;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.layout-menu-profile-no-fill {
+  max-height: 80%;
+}
